SAK-25743 - Update eu translations up to 100% (Crowdin - 2014) (Basque)
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@307843 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat_eu.properties
+++ b/chat-tool/tool/src/bundle/chat_eu.properties
@@ -29,7 +29,7 @@ youdonot1=Ez duzu baimenik txat hau ikusteko.
 youdonot2=Ez duzu baimenik txat hau sortzeko.
 youdonot3=Ez duzu baimenik txat honetara mezuak bidaltzeko.
 youdonot4=Ez duzu baimenik txat honetako mezuak ezabatzeko.
-youent=Sartu zara+sartu duzu
+youent=Sartu zara
 
 
 #General Vm
@@ -69,28 +69,28 @@ custom.which=Zein txat-gela bistaratzea nahi duzu?
 custom.called=izen hau duena\:
 custom.msgdisp=Bistaratu mezua
 ## added for dates limiting (https://jira.sakaiproject.org/browse/SAK-24207)
-custom_date_display=Posting allowed from {0} through {1}
-custom_date_display_start=Posting allowed starting {0}
-custom_date_display_end=Posting allowed through {1}
-custom_date_heading=Allowed Posting Dates
-custom_date_instructions=Users are allowed to post to the chatroom between the dates specified below. \nLeaving or setting a date blank indicates no date restriction (only the permissions would limit posting). \nThe end date must be the same as or later than the start date.
-custom_date_start=Start
-custom_date_end=End
-custom_date_restricted=Posting is currently disabled by configured dates.
-custom_date_error_order=Start date ({0}) must come before end date ({1})
+custom_date_display={0} tik {1} bitarte publikatzea baimentzen da
+custom_date_display_start=Publikazioa baimentzen da hemen hasita {0}
+custom_date_display_end=Publikazioa baimentzen da honaino\: {1}
+custom_date_heading=Baimentzen diren publikatzeko datak
+custom_date_instructions=Behean zehazten diren daten artean, erabiltzaileak idazten ahal dute. Data hutsik bada ez dagoela eperik esan nahi du (baimenak soilik mugatuko zituzten publikazioak). Amaierako data hasierako baino beranduago izan behar da, edo berdina.
+custom_date_start=Hasiera
+custom_date_end=Amaiera
+custom_date_restricted=Konfiguratu diren datengatik ezin da publikatu.
+custom_date_error_order=Hasiera data \nStart date ({0}) must come before end date ({1})\n\nHasiera data ({0}) amaierako data baino lehenago izan behar da ({1})
 # for the date picker
 custom_date_entry_format_description=(mm/dd/yy)
-custom_date_entry_today_is=Today is
+custom_date_entry_today_is=Gaur da
 custom_date_entry_week_header=Wk
 custom_date_entry_format=MM/dd/yy
-custom_date_entry_goto=Go To Current Month
+custom_date_entry_goto=Uneko hilabetera joan
 
 
 #Delete Vm
 
 delete.delete=Ezabatzen ari da berriketako mezua
 delete.sure=Ziur zaude betiko ezabatu nahi duzula mezu hau?
-delete.wrong=Message has been deleted already\!
+delete.wrong=Mezu hori kendua dago lehendik\!
 
 
 #Layaut Vm
@@ -133,7 +133,7 @@ timeAndDate=Eguna eta ordua ere
 dateOnly=Eguna bakarrik
 neitherDateOrTime=Ez eguna, ez ordua
 uniqueid=ID bakarrik
-manage_tool=Kudeaketa tresna
+manage_tool=Aukerak
 lay_note=Berriketa mezu guztiak artxibatuko dira eta guneko edozein kidek irakurri ahal izango ditu
 lay_restricted_note_days=Bakarrik azken {0} egunetako mezuak artxibatuko dira guneko edozein kidek kontsulta ditzan.
 lay_restricted_note_messages=Bakarrik azken {0} mezuak artxibatuko dira guneko edozein kidek kontsulta ditzan.
@@ -146,16 +146,16 @@ change_room=Aldatu gela
 enter_the_chat_room=Sartu ''{0}'' gelan 
 channel_creation_date=Sortze-data
 channel_description=Azalpena
-channel_description_colon=Description\:
+channel_description_colon=Azalpena\:
 channel_title=Titulua
-channel_title_colon=Title\:
+channel_title_colon=Titulua\:
 
 edit_channel_title=Editatu gela
 add_channel_title=Erantsi gela
 
 message_display=Mezua erakusteko
 
-messages_shown_total=Showing {0} messages out of {1}
+messages_shown_total=Erakusten {0} mezu {1}(e)tik
 
 perm_error=Ez dago nahikoa baimen honetarako\: {0}
 
@@ -174,8 +174,8 @@ control_panel=Kontrola
 delete_room_confirm_title=Txat-gela bat ezabatzen ari da
 delete_room_confirm_alert=Ziur zaude betiko ezabatu nahi duzula Txat-gela hau?
 
-delete_room_messages_confirm_title=Deleting all messages from chat room
-delete_room_messages_confirm_alert=Are you sure you want to permanently delete all messages from this chat room?
+delete_room_messages_confirm_title=Ezabatzen txat-gelako mezu guztiak 
+delete_room_messages_confirm_alert=Ziur zaude betiko kendu nahi dituzula mezu guztiak txat-gela honetatik?\t 
 
 #Synoptic pages
 recent_chat_heading=Azken mezuak
