--- a/chat-tool/tool/src/bundle/permissions_eu.properties
+++ b/chat-tool/tool/src/bundle/permissions_eu.properties
@@ -3,6 +3,6 @@ desc-chat.new=Publikatu mezuak
 desc-chat.read=Irakurri mezuak
 desc-chat.delete.any=Ezabatu edozein mezu
 desc-chat.delete.own=Ezabatu norberaren mezuak
-desc-chat.delete.channel=Eabatu gelak
+desc-chat.delete.channel=Ezabatu gelak
 desc-chat.new.channel=Sortu gela berriak
 desc-chat.revise.channel=Ezarri geletako ezarpenak
