SAK-28027 Transifex sintax errors
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@315015 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-impl/impl/src/bundle/chat_es.properties
+++ b/chat-impl/impl/src/bundle/chat_es.properties
@@ -1,5 +1,5 @@
 #X-Generator: crowdin.net
-chat_header=Cabeceras del mensaje
+chat_header=Cabeceras del mensaje\n
 chat_from=De 
-chat_body=Cuerpo del mensaje
+chat_body=Cuerpo del mensaje\n
 chat_message=Mensaje
